# claudekit-cli

./: .gitattributes  .gitignore  .npmignore  .releaserc.js  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CONFIG.md  README.md  biome.json  bunfig.toml  cli-manifest.json  commands-reorganization-analysis.md  commit_msg.txt  investigation-report-doctor-command.md  investigation-report-settings-json-generation.md  package.json  release-manifest.json  security-research-report.md  tsconfig.json
.claude/: settings.json
.githooks/: README.md  install.sh  pre-commit  pre-push
dashboard/: package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: ck-command-flow-guide.md  ck-content.md  ck-watch.md  cli-reference.md  code-standards.md  codebase-summary.md  deployment-guide.md  github-setup.md  project-overview-pdr.md  project-pdr.md  project-roadmap.md  reconciliation-architecture.md  system-architecture.md  tech-stack.md
plans/: 251008-claudekit-cli-implementation-plan.md
scripts/: build-all-binaries.js  build-binaries-after-version-bump.js  build-platform-binaries.js  check-binary-version-sync.js  check-metadata-deletions.js  check-release-dry-run.js  ci-local.sh  compile-binary.ts  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  projects.rs  tray.rs
src-tauri/src/commands/: config.rs  dashboard.rs  mcp.rs  mod.rs  plans.rs  sessions.rs  system.rs
src-tauri/src/core/: config_parser.rs  frontmatter.rs  mod.rs  paths.rs  project_ids.rs  schema.rs
(+1165 files in other folders)
